# learn-ffmpeg

./: README.md  Random.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kangwang/ffmpeddemo/: ExampleInstrumentedTest.java  PlayMp3.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/play/: FfAudioPlay.cpp  FfAudioPlay.h  FfVideoPlay.cpp  FfVideoPlay.h  FfVideoPlayer.cpp  FfVideoPlayer.h  VideoPlay.cpp  VideoPlay.h
app/src/main/cpp/play/decor/: AudioDecor.cpp  AudioDecor.h  AudioDemo.cpp  AudioDemo.h  AvFormartContextInstance.cpp  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/play/decor/base/: PlayBase.cpp  PlayBase.h
app/src/main/cpp/utils/: LogUtils.h
app/src/main/java/com/kangwang/ffmpeddemo/: ConvertMp3.java  FFmpegdiaPlayer.java  MainActivity.java  PermissionUtils.java  PlayerMp3.java  PlayerVideo.java  PlayerView.java  ReadVersion.java
app/src/main/java/com/kangwang/ffmpeddemo/base/: AbstractPlayer.java
app/src/main/java/com/kangwang/ffmpeddemo/nativ/: Player.java
app/src/main/java/com/kangwang/ffmpeddemo/play/: FFmpegdiaConvertMp3.java  FFmpegdiaPlayerMp3.java  FFmpegdiaPlayerVideo.java  FFmpegdiaplayerVideo2.java  ffmpegVideoPlay.java
app/src/main/res/layout/: activity_convert_mp3.xml  activity_main.xml  activity_player_mp3.xml  activity_player_video.xml  activity_player_view.xml  activity_read_version.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kangwang/ffmpeddemo/: ExampleUnitTest.java
doc/: 1.基础知识.md  2.查看版本.md  3.日志.md  4.音频处理.md  5.视频处理.md  5.转码.md  6.H,264.md  7.av_register_all().md  7.avformat_open_input.md  bug修改.md  基础知识.md  附录1：.md
gradle/wrapper/: gradle-wrapper.properties
